Basic comparison working

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "clogo"]
 	path = clogo
 	url = ../clogo
+[submodule "bayesopt"]
+	path = bayesopt
+	url = git@github.com:Eiii/bayesopt.git
