--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,14 +12,20 @@ project( ${PROJ_NAME} )
 add_subdirectory( bayesopt )
 set( BAYESOPT_INCLUDES "bayesopt/include" "bayesopt/utils" )
 
-add_subdirectory( clogo )
-set( CLOGO_INCLUDES "${CMAKE_SOURCE_DIR}/clogo/include" )
-
 set( CMAKE_CXX_FLAGS "-std=c++14 -Wall" )
 set( CMAKE_CXX_FLAGS_RELEASE "-O3" )
 set( CMAKE_CXX_FLAGS_DEBUG "-gdwarf-3" )
 
-include_directories( ${PROJ_INCLUDES} ${CLOGO_INCLUDES} )
+#TODO: Boost stuff?
+set( Boost_USE_STATIC_LIBS ON )
+set( Boost_USE_MULTITHREADED ON )
+set( Boost_USE_STATIC_RUNTIME OFF )
+set( BOOST_ROOT "/scratch/merriler/local" )
+set( BOOST_LIBRARYDIR "/scratch/merriler/local/lib" )
+find_package( Boost 1.61.0 )
+include_directories( SYSTEM ${Boost_INCLUDE_DIR} )
+
+include_directories( ${PROJ_INCLUDES} )
 include_directories( SYSTEM  ${BAYESOPT_INCLUDES} )
 add_executable( ${PROJ_EXE} ${PROJ_SOURCES} )
-target_link_libraries( ${PROJ_EXE} clogo bayesopt )
+target_link_libraries( ${PROJ_EXE} bayesopt )
