--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "bayesopt"]
 	path = bayesopt
 	url = git@github.com:Eiii/bayesopt.git
+[submodule "cpplogo"]
+	path = cpplogo
+	url = git@github.com:Eiii/cpplogo.git
