Added output file as an argument, random harness

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ set( PROJ_NAME "opt_cmp" )
 set( PROJ_EXE "opt_cmp" )
 
 file( GLOB_RECURSE PROJ_SOURCES "src/*.cc" )
+file( GLOB_RECURSE PROJ_HACKS "hacks/*.cc" )
 set( PROJ_INCLUDES "${CMAKE_CURRENT_SOURCE_DIR}/include" )
 
 project( ${PROJ_NAME} )
@@ -15,7 +16,7 @@ set( BAYESOPT_INCLUDES "bayesopt/include" "bayesopt/utils" )
 add_subdirectory( cpplogo )
 set( CPPLOGO_INCLUDES "cpplogo/include" )
 
-set( CMAKE_CXX_FLAGS "-std=c++14 -Wall -pthread" )
+set( CMAKE_CXX_FLAGS "-std=c++14 -Wall -pthread -static-libstdc++" )
 set( CMAKE_CXX_FLAGS_RELEASE "-O3" )
 set( CMAKE_CXX_FLAGS_DEBUG "-gdwarf-3" )
 
@@ -28,7 +29,9 @@ set( BOOST_LIBRARYDIR "/scratch/merriler/local/lib" )
 find_package( Boost 1.61.0 COMPONENTS log REQUIRED )
 include_directories( SYSTEM ${Boost_INCLUDE_DIR} )
 
+message( STATUS ${Boost_LIBRARIES} )
+
 include_directories( ${PROJ_INCLUDES} )
 include_directories( SYSTEM  ${BAYESOPT_INCLUDES} ${CPPLOGO_INCLUDES} )
-add_executable( ${PROJ_EXE} ${PROJ_SOURCES} )
+add_executable( ${PROJ_EXE} ${PROJ_SOURCES} ${PROJ_HACKS} )
 target_link_libraries( ${PROJ_EXE} bayesopt cpplogo ${Boost_LIBRARIES} )
