--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "cpplogo"]
 	path = cpplogo
 	url = git@github.com:Eiii/cpplogo.git
+[submodule "json"]
+	path = json
+	url = https://github.com/nlohmann/json.git
