Added cpplogo2 submodule

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,18 +10,14 @@ set( PROJ_INCLUDES "${CMAKE_CURRENT_SOURCE_DIR}/include" )
 project( ${PROJ_NAME} )
 
 #set( Boost_NO_BOOST_CMAKE TRUE )
-add_subdirectory( bayesopt )
+#add_subdirectory( bayesopt )
 set( BAYESOPT_INCLUDES "bayesopt/include" "bayesopt/utils" )
 
-add_subdirectory( cpplogo )
-set( CPPLOGO_INCLUDES "cpplogo/include" )
+add_subdirectory( cpplogo2 )
+set( CPPLOGO_INCLUDES "cpplogo2/include" )
 
 #add_subdirectory( json )
 set( JSON_INCLUDES "json/src" )
-
-set( CMAKE_CXX_FLAGS "-std=c++14 -Wall -pthread -static-libstdc++" )
-set( CMAKE_CXX_FLAGS_RELEASE "-O3" )
-set( CMAKE_CXX_FLAGS_DEBUG "-gdwarf-3" )
 
 #TODO: Boost stuff? - for cpplogo
 set( Boost_USE_STATIC_LIBS ON )
@@ -32,9 +28,11 @@ set( BOOST_LIBRARYDIR "/scratch/merriler/local/lib" )
 find_package( Boost 1.61.0 COMPONENTS log REQUIRED )
 include_directories( SYSTEM ${Boost_INCLUDE_DIR} )
 
-message( STATUS ${Boost_LIBRARIES} )
+set( CMAKE_CXX_FLAGS "-std=c++14 -Wall -pthread -static-libstdc++" )
+set( CMAKE_CXX_FLAGS_RELEASE "-O3" )
+set( CMAKE_CXX_FLAGS_DEBUG "-gdwarf-3" )
 
 include_directories( ${PROJ_INCLUDES} )
 include_directories( SYSTEM  ${BAYESOPT_INCLUDES} ${CPPLOGO_INCLUDES} ${JSON_INCLUDES} )
 add_executable( ${PROJ_EXE} ${PROJ_SOURCES} ${PROJ_HACKS} )
-target_link_libraries( ${PROJ_EXE} cpplogo bayesopt ${Boost_LIBRARIES} )
+target_link_libraries( ${PROJ_EXE} cpplogo2 bayesopt ${Boost_LIBRARIES} )
