--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "json"]
 	path = json
 	url = https://github.com/nlohmann/json.git
+[submodule "cpplogo2"]
+	path = cpplogo2
+	url = git@github.com:Eiii/cpplogo2.git
