Updated to the new cpplogo repo, added bamlogo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,10 +11,10 @@ project( ${PROJ_NAME} )
 
 #set( Boost_NO_BOOST_CMAKE TRUE )
 #add_subdirectory( bayesopt )
-set( BAYESOPT_INCLUDES "cpplogo2/bayesopt/include" "cpplogo2/bayesopt/utils" )
+set( BAYESOPT_INCLUDES "cpplogo/bayesopt/include" "cpplogo/bayesopt/utils" )
 
-add_subdirectory( cpplogo2 )
-set( CPPLOGO_INCLUDES "cpplogo2/include" )
+add_subdirectory( cpplogo )
+set( CPPLOGO_INCLUDES "cpplogo/include" )
 
 #add_subdirectory( json )
 set( JSON_INCLUDES "json/src" )
@@ -35,4 +35,4 @@ set( CMAKE_CXX_FLAGS_DEBUG "-gdwarf-3" )
 include_directories( ${PROJ_INCLUDES} )
 include_directories( SYSTEM  ${BAYESOPT_INCLUDES} ${CPPLOGO_INCLUDES} ${JSON_INCLUDES} )
 add_executable( ${PROJ_EXE} ${PROJ_SOURCES} ${PROJ_HACKS} )
-target_link_libraries( ${PROJ_EXE} cpplogo2 bayesopt ${Boost_LIBRARIES} )
+target_link_libraries( ${PROJ_EXE} cpplogo bayesopt ${Boost_LIBRARIES} )
