First pass at DIRECT

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ project( ${PROJ_NAME} )
 #set( Boost_NO_BOOST_CMAKE TRUE )
 #add_subdirectory( bayesopt )
 set( BAYESOPT_INCLUDES "cpplogo/bayesopt/include" "cpplogo/bayesopt/utils" )
+set( NLOPT_INCLUDES "cpplogo/bayesopt/nlopt2/api" )
 
 add_subdirectory( cpplogo )
 set( CPPLOGO_INCLUDES "cpplogo/include" )
@@ -33,6 +34,6 @@ set( CMAKE_CXX_FLAGS_RELEASE "-O3" )
 set( CMAKE_CXX_FLAGS_DEBUG "-gdwarf-3" )
 
 include_directories( ${PROJ_INCLUDES} )
-include_directories( SYSTEM  ${BAYESOPT_INCLUDES} ${CPPLOGO_INCLUDES} ${JSON_INCLUDES} )
+include_directories( SYSTEM  ${BAYESOPT_INCLUDES} ${NLOPT_INCLUDES} ${CPPLOGO_INCLUDES} ${JSON_INCLUDES} )
 add_executable( ${PROJ_EXE} ${PROJ_SOURCES} ${PROJ_HACKS} )
 target_link_libraries( ${PROJ_EXE} cpplogo bayesopt ${Boost_LIBRARIES} )
